--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "node": "nodemon server.js"  
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
