--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +25,13 @@
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20",
     "solc": "^0.8.17",
     "truffle-contract": "^4.0.31",
     "truffle-hdwallet-provider": "^1.0.17",
     "validatorjs": "^3.22.1",
     "web3": "^1.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
