--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "install": "^0.13.0",
     "jsonfile": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
